  * conf/crontab-master: run gather_bts_stats daily.
  * master-bin/prepare_backup: backup bts_stats.txt and do not backup
    sources.txt.
  * piuparts.py: categorize adequate results using inadequate_tags,
    boring_tags, ignored_tags and unknown. Show adequate exit code if
    non-zero.
  * Add known_problems/*inadequate*.conf for all adequate tags we care about.

  [ Andrew Starr-Bochicchio ]
  * piuparts.py:
    - Move default keyring to distro defaults.  (Closes: #710346)

 -- Andreas Beckmann <anbe@debian.org>  Mon, 27 May 2013 18:24:27 +0200

piuparts (0.52) unstable; urgency=low

  [ Andreas Beckmann ]
  * piuparts.py:
    - Really disable PDiffs.  (Closes: #708241)
  * piuparts-master.in:
    - Use timeout to prevent master from getting stuck.  (Closes: #701618)
  * piuparts-slave.py:
    - Report upgrade tests involving downgrades as untestable.
    - Always pass --arch <arch> to piuparts.
  * piuparts-analyze.py:
    - Consider archived bugs, too.  (Closes: #669966)
  * piuparts-report.py:
    - Switch from python-rpy to python-rpy2.  (Closes: #705975)
    - rpy2: Use a noninteractive grDevice.
  * Makefile:
    - Switch default target from 'install' to 'build'.
  * scripts-no-usr-share-doc/post_setup_disable_usr_share_doc: New custom
    script to instruct dpkg to skip installing most files in /usr/share/doc.
    This catches maintainer scripts relying on /usr/share/doc content.
  * New bug template: postinst_uses_usr_share_doc.
  * piuparts-master.deb:
    - Switch Depends: python-rpy to Depends: python-rpy2.

  [ Holger Levsen ]
  * piuparts.py:
    - Run adequate (if installed) after installation test. New options
      --no-adequate and --fail-if-inadequate. (Closes: #703902)
    - Workaround #709372 and ignore broken symlinks found by adequate.
    - Do not print a "Guessed: debian" line on every run. It's the default
      anyway. (Closes: #703058)
  * piuparts-report:
    - Add templates for known_problems/inadequate_issue and inadequate_error.