@@ -62,6 +62,7 @@ piuparts (0.53) UNRELEASED; urgency=low
     boring_tags, ignored_tags and unknown. Show adequate exit code if
     non-zero.
   * Add known_problems/*inadequate*.conf for all adequate tags we care about.
+  * piuparts-master-backend.py: if called with arguments, output status.
 
   [ Andrew Starr-Bochicchio ]
   * piuparts.py:
